--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 certifi==2023.11.17
 charset-normalizer==3.3.2
+colorama==0.4.6
 idna==3.4
+python-dateutil==2.8.2
 requests==2.31.0
+six==1.16.0
+structlog==23.2.0
 urllib3==2.1.0
