--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 colorama==0.4.6
 idna==3.4
+numpy==1.26.2
+pandas==2.1.3
 python-dateutil==2.8.2
+pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
 structlog==23.2.0
+tzdata==2023.3
 urllib3==2.1.0
